<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.finalweatherproject.fragments.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_daylistFragment"
            app:destination="@id/daylistFragment" />
    </fragment>
    <fragment
        android:id="@+id/daylistFragment"
        android:name="com.example.finalweatherproject.fragments.DaylistFragment"
        android:label="DaylistFragment" />
</navigation>