<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SearchFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_view_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin16"
        app:cardCornerRadius="@dimen/corner18"
        app:cardElevation="@dimen/corner18"
        app:strokeColor="@color/mainTextColor"
        app:strokeWidth="@dimen/size1">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:defaultQueryHint="@string/start_typing"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_view_container"
        android:layout_margin="@dimen/margin16"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_search_result"/>

</androidx.constraintlayout.widget.ConstraintLayout>