<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_background"
    tools:context=".fragments.SettingsFragment">

    <RadioGroup
...
